# aic-embedding-server

./: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  text_embed_pb2.py  text_embed_pb2.pyi  text_embed_pb2_grpc.py
